<resources>
    <string name="app_name">EarthQuake Watcher</string>
    <string name="title_activity_maps">Map</string>
    <string name="hello">Hello</string>
    <string name="magnitude">magnitude</string>
    <string name="more_info">More Info...</string>
    <string name="more_information">More Information</string>
    <string name="surrounding_cities">Surrounding Cities</string>
    <string name="close">Close</string>
    <string name="show_list">Show List</string>
</resources>
