<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iconInfo"
                android:src="@android:drawable/ic_dialog_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/windowTitle"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/hello"
                android:layout_toEndOf="@id/iconInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/magnitude"
                android:layout_toEndOf="@id/iconInfo"
                android:layout_below="@id/windowTitle"
                android:text="@string/magnitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/button"
                android:layout_toEndOf="@id/magnitude"
                android:layout_marginStart="6dp"
                android:layout_alignBottom="@id/magnitude"
                android:text="@string/more_info"
                android:background="@android:color/transparent"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>